[add] - random quote after timer ends

--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
                 </div>
             </div>
         </section>
+
+        <!-- quote section -->
+        <section class="quote-section d-none">
+            <div class="container">
+                <h2 class="text-center">Quote of the day</h2>
+                <div class="quote-container">
+                    <p id="quote" class="fs-1 text-center">this is a quote</p>
+                    <p class="text-center">- <span id="author">by this author</span></p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer></footer>
