--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <section class="quote-section d-none">
             <div class="container">
                 <h2 class="text-center">Quote of the day</h2>
-                <div class="quote-container">
+                <div class="quote-container text-warning">
                     <p id="quote" class="fs-1 text-center">this is a quote</p>
                     <p class="text-center">- <span id="author">by this author</span></p>
                 </div>
