[add] - audio play when timer finishes and stops after entering new time.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
                 </div>
             </div>
         </section>
+
+        <audio src="./assets/audio/uplifting-rock-party-happy-celebration-404296.mp3" loop></audio>
     </main>
 
     <footer></footer>
